# Levenshtein

./: .buildinfo  .clang-format  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  .travis.yml  CMakeLists.txt  HISTORY.md  HISTORY.txt  Levenshtein.c  Levenshtein.html  MANIFEST.in  Makefile  README.md  README.rst  changelog.html  genindex.html  index.html  installation.html  levenshtein.html  make.bat  objects.inv  pyproject.toml  search.html  searchindex.js  setup.cfg  setup.py
.github/: FUNDING.yml
.github/workflows/: docs.yml  pythonbuild.yml
Levenshtein/: _levenshtein.c  _levenshtein.h  _levenshtein_impl.c
_custom_build/: backend.py
_sources/: changelog.rst.txt  index.rst.txt  installation.rst.txt
_static/: documentation_options.js
docs/: Levenshtein.html  Levenshtein.rst  changelog.rst  conf.py  gendoc.sh  index.rst  installation.rst
src/: _levenshtein.c  _levenshtein.cpp  c_levenshtein.c  c_levenshtein.cpp  c_levenshtein.pyx  cpp_levenshtein.cpp  cpp_levenshtein.pyx  cpp_string_metric.hpp
src/Levenshtein/: CMakeLists.txt  StringMatcher.py  __init__.py  __init__.pyi  _levenshtein.cpp  cpp_levenshtein.pyx  generate.sh  levenshtein_cpp.pyx
src/Levenshtein-c/: _levenshtein.c  _levenshtein.cpp  _levenshtein.h  _levenshtein.hpp  _levenshtein_impl.hpp
src/Levenshtein/Levenshtein-c/: _levenshtein.cpp  _levenshtein.hpp
src/cython/: CMakeLists.txt  _levenshtein.cpp  cpp_levenshtein.pyx
src/cython/Levenshtein-c/: _levenshtein.cpp  _levenshtein.hpp
tests/: test_levenshtein_distance.py  test_matching_blocks.py  test_median.py  test_seq_ratio.py  test_set_ratio.py
tools/: sdist.patch
