[build-system]
requires = [
    "scikit-build-core>=0.10.6",
    "Cython>=3.0.2,<3.1.0"
]
build-backend = "scikit_build_core.build"

[project]
name = "Levenshtein"
dynamic = ["version"]
dependencies = [
  "rapidfuzz >= 3.9.0, < 4.0.0"
]
requires-python = ">= 3.9"
authors = [
  {name = "Max Bachmann", email = "pypi@maxbachmann.de"},
]
description = "Python extension for computing string edit distances and similarities."
readme = "README.md"
classifiers=[
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)",
]
Homepage = "https://github.com/rapidfuzz/Levenshtein"
Documentation = "https://rapidfuzz.github.io/Levenshtein/"
Repository = "https://github.com/rapidfuzz/Levenshtein.git"
Issues = "https://github.com/rapidfuzz/Levenshtein/issues"
Changelog = "https://github.com/rapidfuzz/Levenshtein/blob/main/HISTORY.md"

[tool.scikit-build]
sdist.include = [
  "src/Levenshtein/*.cxx",
  "src/Levenshtein/_version.py"
]
sdist.exclude = [
  ".github"
]
wheel.exclude = [
  "**.pyx",
  "**.cxx",
  "**.cpp",
  "**.hpp",
  "CMakeLists.txt",
  "generate.sh"
]

[tool.scikit-build.metadata.version]
provider = "scikit_build_core.metadata.regex"
input = "src/Levenshtein/__init__.py"

[tool.black]
line-length = 120

[tool.mypy]
files = ["src"]
python_version = "3.9"
warn_unused_configs = true
show_error_codes = true
enable_error_code = ["ignore-without-code", "redundant-expr", "truthy-bool"]
strict = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["tests"]
addopts = ["-ra", "--showlocals", "--strict-markers", "--strict-config"]
norecursedirs = ["_skbuild"]
xfail_strict = true
log_cli_level = "info"

[tool.pylint]
py-version = "3.9"

[tool.pylint.reports]
output-format = "colorized"

[tool.pylint.messages_control]
disable = [
  "design",
  "fixme",
  "imports",
  "line-too-long",
  "imports",
  "invalid-name",
  "protected-access",
  "missing-module-docstring",
]


[tool.ruff]
select = [
  "E", "F", "W", # flake8
  "B",           # flake8-bugbear
  "I",           # isort
  "ARG",         # flake8-unused-arguments
  "C4",          # flake8-comprehensions
  "EM",          # flake8-errmsg
  "ICN",         # flake8-import-conventions
  "ISC",         # flake8-implicit-str-concat
  "G",           # flake8-logging-format
  "PGH",         # pygrep-hooks
  "PIE",         # flake8-pie
  "PL",          # pylint
  "PT",          # flake8-pytest-style
  "PTH",         # flake8-use-pathlib
  "RET",         # flake8-return
  "RUF",         # Ruff-specific
  "SIM",         # flake8-simplify
  "T20",         # flake8-print
  "UP",          # pyupgrade
  "YTT",         # flake8-2020
  "EXE",         # flake8-executable
  "NPY",         # NumPy specific rules
  "PD",          # pandas-vet
]
extend-ignore = [
  "PLR",    # Design related pylint codes
  "E501",   # Line too long
  "PT004",  # Use underscore for non-returning fixture (use usefixture instead)
  "PTH123", # use pathlib instead of builtin open
  "PLC1901", # simply not always correct
]
target-version = "py39"
src = ["src"]
unfixable = [
  "T20",  # Removes print statements
  "F841", # Removes unused variables
]
exclude = []
flake8-unused-arguments.ignore-variadic-names = true
isort.required-imports = ["from __future__ import annotations"]

[tool.ruff.per-file-ignores]
"tests/**" = ["T20"]
"bench/**" = ["T20"]
"_custom_build/backend.py" = ["T20"]
"setup.py" = ["T20"]
