[metadata]
name = Levenshtein
version = 0.13.0
url = https://github.com/maxbachmann/Levenshtein
author = Max Bachmann
author_email = contact@maxbachmann.de
description = Python extension for computing string edit distances and similarities.
long_description = file: README.rst, HISTORY.txt
long_description_content_type = text/markdown

license = GPL
license_file = COPYING
classifiers =
    Programming Language :: Python :: 2,
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=2.7